Fixed broken styles.

--- a/css/landing/testimonials.less
+++ b/css/landing/testimonials.less
@@ -6,7 +6,7 @@ section.testimonials {
             /**
             * Dislike these differet fixed sizes here.
             */
-            height: 15em;
+            height: 16em;
             @media screen and (max-width: (@SMARTPHONE_MAX_PORTRAIT * 1.8)) { height: 20em; }
             @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { height: 16em; }
             @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { .row(11); }
