--- a/css/navigation.less
+++ b/css/navigation.less
@@ -149,6 +149,8 @@ sections {
                         .triangle {
                             .triangle(@triangle_size);
                             margin-top: calc(-@triangle_size);
+                            margin-left: auto;
+                            margin-right: auto;
                             @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { 
                                 .triangle(@triangle_size_mobile);
                                 margin-top: calc(-@triangle_size_mobile); 
